0.10.1 [2008-??-??]
Added reset all config options button.
Added code for uncompressing gzip files (borrowed from from libkde)
Fixed flip buttons bug.
Fixed min FPS feature.

0.10.0 beta [2008-09-22]
Global switch to Qt. Don't support SDL main application anymore.
The whole StelApp class is managed by a QGraphicsScene, inside a QGraphicsView.
Removed deprecated sources from the core of stellarium (old GUI, TUI and scripting).
Continued API cleaning and simplifications.
Performed large refactorings to use portable Qt API (migrated from std::string and std::wstring to QString).
Re-organized the source files into sub-directories.
Migrated config file parsing to a QSettings based implementation.
Exposed some methods as slots so that they can be scripted in the future.
Created the new Qt-based GUI button bars (QGraphicsItems).
Recoded from scratch the new QWidget based GUI rendered in the QGraphicsView using style sheets.
Moved stars/planets halo rendering into SkyDrawer.
Implemented dynamic eye adaptation for bright objects.
Optimized atmosphere computation and others, speed can be increased up to a factor of 2.
Implemented light pollution following the Bortle scale index.
Improved and optimized stars rendering (updated colors, sizes and added large halo for very bright ones, use GL lists for drawing stars by bunch)
Made testing python wrappers using SIP (unused)
Created a new SkyTile class supporting lazy dynamic multi-resolution images loading and display. Image trees can be stored as JSON files.
Startup is much faster.
Migrated the previous nebula textures to the new format.
Added a LocationManager for managing observing locations and cleaned the code of observer.
Changed key bindings, use F1.. F6 for opening dialogs.
Tab completion on the search dialog.
Added descriptions for the sky cultures and improved the ones for landscapes.
Added a new mars landscape.
Fixed many bugs.

0.9.1 [2008-01-17]
Got rid of autoconf/automake (Hooray!)
Fixed a grid RA labeling bug.