@@ -1,8 +1,10 @@
 0.10.1 [2008-??-??]
 Added reset all config options button.
 Added code for uncompressing gzip files (borrowed from from libkde)
+Allowed for gzip compressed JSON files.
 Fixed flip buttons bug.
 Fixed min FPS feature.
+Implemented screenshots inverted colors feature + associated GUI.
 
 0.10.0 beta [2008-09-22]
 Global switch to Qt. Don't support SDL main application anymore.
